--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redis-builder",
   "description": "Easily create/configure a redis client",
-  "version": "0.9.1",
+  "version": "1.0.0",
   "homepage": "https://github.com/mattinsler/redis-builder",
   "author": {
     "name": "Matt Insler",
@@ -26,9 +26,7 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
-    "betturl": "~0.2.3",
-    "redis": "~0.9.1",
-    "hiredis": "~0.1.15"
+    "betturl": "~0.2.3"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
